--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>email-sendgrid</module>
         <module>security</module>
         <module>common-utils</module>
+        <module>metadata</module>
 
         <module>parser-api</module>
         <module>parser-core</module>
@@ -39,7 +40,6 @@
         <module>domain-store</module>
         <module>domain-shopping</module>
         <module>process</module>
-        <module>system-loader</module>
 
         <module>rest-common</module>
         <module>rest-internal</module>
