--- a/server-web-api/src/main/resources/config/application.yml
+++ b/server-web-api/src/main/resources/config/application.yml
@@ -19,9 +19,9 @@ application:
     settings:
         email:
             systemName: GroundTruth Inc.
-            systemEmail: no-reply@openprice.com
+            systemEmail: no-reply@theopenprice.com
             adminName: Open Price
-            adminEmail: admin@openprice.com
+            adminEmail: jiwhiz@gmail.com
             webServerUrl: http://104.154.88.206:8080
         internal:
             serverHost: op-server-internal-api
