change dependency to parser-api

--- a/domain-receipt/pom.xml
+++ b/domain-receipt/pom.xml
@@ -21,10 +21,9 @@
             <version>${project.version}</version>
         </dependency>
         
-        <!-- TODO change to op-parser-api after parser refactoring -->
         <dependency>
             <groupId>com.openprice</groupId>
-            <artifactId>op-parser-core</artifactId>
+            <artifactId>op-parser-api</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
