--- a/server-admin-api/src/main/resources/config/application.yml
+++ b/server-admin-api/src/main/resources/config/application.yml
@@ -18,7 +18,7 @@ application:
             systemName: GroundTruth Inc.
             systemEmail: no-reply@theopenprice.com
             adminName: Open Price
-            adminEmail: jiwhiz@gmail.com
+            adminEmail: admin@theopenprice.com
         internal:
             serverHost: op-server-internal-api
             serverPort: 8080
