--- a/server-internal-api/src/main/resources/config/application.yml
+++ b/server-internal-api/src/main/resources/config/application.yml
@@ -27,5 +27,5 @@ application:
             cloudEngineEnabled: true
             numberOfServers: 1
             waitSeconds: 0
-            cloudApplicationId: JiwhizOCR
-            cloudPassword: a+4O1z0k9PbPWlXavy+42++g
+            cloudApplicationId: openprice
+            cloudPassword: VGe2YmGwhmKrd6YDxR3tEul2
