disable Cloud SDK

--- a/server-internal-api/src/main/resources/config/application.yml
+++ b/server-internal-api/src/main/resources/config/application.yml
@@ -24,8 +24,8 @@ application:
             virtual: false
             imageRootFolder: /groundtruth/images
         process:
-            cloudEngineEnabled: true
-            numberOfServers: 1
-            waitSeconds: 0
+            cloudEngineEnabled: false
+            numberOfServers: 0
+            waitSeconds: 10
             cloudApplicationId: openprice
             cloudPassword: VGe2YmGwhmKrd6YDxR3tEul2
