parser api and fixing storebranches

--- a/parser-core/pom.xml
+++ b/parser-core/pom.xml
@@ -31,5 +31,10 @@
             <version>${project.version}</version>
         </dependency>
         
+        <dependency>
+            <groupId>com.openprice</groupId>
+            <artifactId>op-metadata</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
