--- a/parser-core/pom.xml
+++ b/parser-core/pom.xml
@@ -31,6 +31,12 @@
             <version>${project.version}</version>
         </dependency>
         
+                <dependency>
+            <groupId>com.openprice</groupId>
+            <artifactId>parser-core-ml</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>com.openprice</groupId>
             <artifactId>op-metadata</artifactId>
