--- a/parser-core-ml/pom.xml
+++ b/parser-core-ml/pom.xml
@@ -8,7 +8,7 @@
         <version>0.3.0</version>
     </parent>
 
-    <artifactId>parser-core-ml</artifactId>
+    <artifactId>op-parser-core-ml</artifactId>
     <packaging>jar</packaging>
 
     <name>Parser Machine Learning Module</name>
