fix web server config, and change maven resource filter delimiter

--- a/server-internal-api/src/main/resources/config/application.yml
+++ b/server-internal-api/src/main/resources/config/application.yml
@@ -18,8 +18,8 @@ application:
             systemName: GroundTruth Inc.
             systemEmail: no-reply@theopenprice.com
             adminName: Open Price
-            adminEmail: admin@theopenprice.com
-            webServerUrl: http://104.154.88.206:8080
+            adminEmail: #{openprice.support.email}
+            webServerUrl: #{openprice.web.url}
         file:
             virtual: false
             imageRootFolder: /groundtruth/images
