--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <delimiters>
+                        <delimiter>#{*}</delimiter>
+                    </delimiters>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -174,6 +179,10 @@
                 <!-- log configuration -->
                 <logback.loglevel>DEBUG</logback.loglevel>
                 <logback.loggly.loglevel>OFF</logback.loggly.loglevel>
+                <!-- Openprice env -->
+                <openprice.web.url>http://dev.theopenprice.com:8080</openprice.web.url>
+                <openprice.admin.email>jiwhiz@gmail.com</openprice.admin.email>
+                <openprice.support.email>jiwhiz@gmail.com</openprice.support.email>
             </properties>
             <dependencies>
                 <dependency>
@@ -188,6 +197,10 @@
                 <!-- log configuration -->
                 <logback.loglevel>INFO</logback.loglevel>
                 <logback.loggly.loglevel>INFO</logback.loggly.loglevel>
+                <!-- Openprice env -->
+                <openprice.web.url>http://www.theopenprice.com:8080</openprice.web.url>
+                <openprice.admin.email>admin@theopenprice.com</openprice.admin.email>
+                <openprice.support.email>support@theopenprice.com</openprice.support.email>
             </properties>
             <dependencies>
                 <dependency>
