--- a/server-web-api/src/main/resources/config/application.yml
+++ b/server-web-api/src/main/resources/config/application.yml
@@ -18,9 +18,9 @@ multipart:
 application:
     settings:
         email:
-            systemName: GroundTruth Inc.
-            systemEmail: no-reply@theopenprice.com
-            adminName: Open Price
+            systemName: Openprice Support
+            systemEmail: support@theopenprice.com
+            adminName: Openprice Admin
             adminEmail: admin@theopenprice.com
             webServerUrl: http://104.154.88.206:8080
         internal:
