--- a/server-internal-api/src/main/resources/config/application.yml
+++ b/server-internal-api/src/main/resources/config/application.yml
@@ -15,10 +15,10 @@ spring:
 application:
     settings:
         email:
-            systemName: GroundTruth Inc.
-            systemEmail: no-reply@theopenprice.com
-            adminName: Open Price
-            adminEmail: #{openprice.support.email}
+            systemName: Openprice Team
+            systemEmail: #{openprice.support.email}
+            adminName: Openprice Admin
+            adminEmail: #{openprice.admin.email}
             webServerUrl: #{openprice.web.url}
         file:
             virtual: false
