--- a/server-web-api/src/main/resources/config/application.yml
+++ b/server-web-api/src/main/resources/config/application.yml
@@ -18,10 +18,10 @@ multipart:
 application:
     settings:
         email:
-            systemName: GroundTruth Inc.
-            systemEmail: no-reply@theopenprice.com
-            adminName: Open Price
-            adminEmail: #{openprice.support.email}
+            systemName: Openprice Team
+            systemEmail: #{openprice.support.email}
+            adminName: Openprice Admin
+            adminEmail: #{openprice.admin.email}
             webServerUrl: #{openprice.web.url}
         internal:
             serverHost: op-server-internal-api
