--- a/api-internal/pom.xml
+++ b/api-internal/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-api-internal</artifactId>
     <packaging>jar</packaging>
 
     <name>Internal API Module</name>
-    <description>OpenPrice Internal Service public API code for other module usage.</description>
+    <description>Openprice Internal Service public API code for other module usage.</description>
 
     <dependencies>
         <dependency>
