--- a/common-utils/pom.xml
+++ b/common-utils/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-common-utils</artifactId>
     <packaging>jar</packaging>
 
     <name>Common Util Module</name>
-    <description>OpenPrice shared util code for all other modules.</description>
+    <description>Openprice shared util code for all other modules.</description>
 
     <dependencies>
         <dependency>
