--- a/domain-account-admin/pom.xml
+++ b/domain-account-admin/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-domain-account-admin</artifactId>
     <packaging>jar</packaging>
 
     <name>Admin Account Domain Module</name>
-    <description>OpenPrice business domain module for admin account.</description>
+    <description>Openprice business domain module for admin account.</description>
 
     <dependencies>
         <dependency>
