--- a/domain-receipt/pom.xml
+++ b/domain-receipt/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-domain-receipt</artifactId>
     <packaging>jar</packaging>
 
     <name>Receipt Domain Module</name>
-    <description>OpenPrice business domain module for receipt.</description>
+    <description>Openprice business domain module for receipt.</description>
 
     <dependencies>
         <dependency>
@@ -20,7 +20,7 @@
             <artifactId>op-domain-account-user</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.openprice</groupId>
             <artifactId>op-parser-api</artifactId>
