--- a/domain-shopping/pom.xml
+++ b/domain-shopping/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-domain-shopping</artifactId>
     <packaging>jar</packaging>
 
     <name>User Shopping Domain Module</name>
-    <description>OpenPrice business domain module for shopping list.</description>
+    <description>Openprice business domain module for shopping list.</description>
 
     <dependencies>
         <dependency>
@@ -30,6 +30,6 @@
             <artifactId>op-parser-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
     </dependencies>
 </project>
