--- a/email-sendgrid/pom.xml
+++ b/email-sendgrid/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-email-sendgrid</artifactId>
     <packaging>jar</packaging>
 
     <name>Sendgrid Service Module</name>
-    <description>Email service using SendGrid.</description>
+    <description>Openprice Email service using SendGrid.</description>
 
     <dependencies>
         <dependency>
