--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-metadata</artifactId>
     <packaging>jar</packaging>
 
     <name>System Metadata Module</name>
-    <description>OpenPrice system metadata used by parser and domain modules.</description>
+    <description>Openprice system metadata used by parser and domain modules.</description>
 
     <dependencies>
         <dependency>
@@ -20,7 +20,7 @@
             <artifactId>op-common-utils</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
