--- a/parser-api/pom.xml
+++ b/parser-api/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-parser-api</artifactId>
     <packaging>jar</packaging>
 
     <name>Parser API Module</name>
-    <description>OpenPrice shared code for parser and loader.</description>
+    <description>Openprice shared code for parser and loader.</description>
 
     <dependencies>
         <dependency>
