--- a/parser-core/pom.xml
+++ b/parser-core/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-parser-core</artifactId>
     <packaging>jar</packaging>
 
     <name>Parser Core Module</name>
-    <description>OpenPrice parser core module of common parser code.</description>
+    <description>Openprice parser core module of common parser code.</description>
 
     <dependencies>
         <dependency>
@@ -24,13 +24,13 @@
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.openprice</groupId>
             <artifactId>op-parser-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.openprice</groupId>
             <artifactId>op-metadata</artifactId>
