--- a/parser-stores/pom.xml
+++ b/parser-stores/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-parser-stores</artifactId>
     <packaging>jar</packaging>
 
     <name>Parser Stores Module</name>
-    <description>OpenPrice parser for all different stores.</description>
+    <description>Openprice parser for all different stores.</description>
 
     <dependencies>
         <dependency>
