--- a/process/pom.xml
+++ b/process/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-process</artifactId>
     <packaging>jar</packaging>
 
     <name>Image Process Module</name>
-    <description>OpenPrice backend image process module.</description>
+    <description>Openprice backend image process module.</description>
 
     <dependencies>
         <dependency>
