--- a/rest-common/pom.xml
+++ b/rest-common/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-rest-common</artifactId>
     <packaging>jar</packaging>
 
     <name>Rest API Common Code Module</name>
-    <description>OpenPrice Common shared classes for Rest API modules.</description>
+    <description>Openprice Common shared classes for Rest API modules.</description>
 
     <dependencies>
         <dependency>
