--- a/rest-user/pom.xml
+++ b/rest-user/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-rest-user</artifactId>
     <packaging>jar</packaging>
 
     <name>User Rest API Module</name>
-    <description>OpenPrice Rest API module for user account.</description>
+    <description>Openprice Rest API module for user account.</description>
 
     <dependencies>
         <dependency>
