--- a/server-common/pom.xml
+++ b/server-common/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>com.openprice</groupId>
         <artifactId>op-project</artifactId>
-        <version>0.3.0</version>
+        <version>0.4.0</version>
     </parent>
 
     <artifactId>op-server-common</artifactId>
     <packaging>jar</packaging>
 
     <name>RESTful API Server Common</name>
-    <description>OpenPrice common code for other RESTful API Servers, such as web-api and admin-api.</description>
+    <description>Openprice common code for other RESTful API Servers, such as web-api and admin-api.</description>
 
     <dependencies>
         <dependency>
