--- a/server-web-api/src/main/resources/config/application.yml
+++ b/server-web-api/src/main/resources/config/application.yml
@@ -30,3 +30,6 @@ application:
             virtual: false
             imageRootFolder: /groundtruth/images
 
+server:
+    tomcat:
+        internal-proxies: 
