test use-forward-headers to true

--- a/server-web-api/src/main/resources/config/application.yml
+++ b/server-web-api/src/main/resources/config/application.yml
@@ -31,5 +31,6 @@ application:
             imageRootFolder: /groundtruth/images
 
 server:
+    use-forward-headers: true
     tomcat:
         internal-proxies: 
