allow nginx max request size to 100m

--- a/scripts/dev/nginx/conf.d/default.conf
+++ b/scripts/dev/nginx/conf.d/default.conf
@@ -11,6 +11,7 @@ server {
     server_name  dev-api.theopenprice.com;
 
     location / {
+        client_max_body_size 100M;
         proxy_set_header Host $host;
         proxy_pass http://op-server-web-api:8080;
     }
@@ -28,6 +29,7 @@ server {
     server_name  dev-admin-api.theopenprice.com;
 
     location / {
+        client_max_body_size 100M;
         proxy_set_header Host $host;
         proxy_pass http://op-server-admin-api:8080;
     }
