--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@
 
     <profiles>
         <profile>
-            <id>dev</id>
+            <id>local</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
@@ -180,9 +180,9 @@
                 <!-- log configuration -->
                 <logback.loglevel>DEBUG</logback.loglevel>
                 <logback.loggly.loglevel>OFF</logback.loggly.loglevel>
-                <openprice.web.url>http://192.168.99.101:8080</openprice.web.url>
-                <openprice.admin.email>hengshuai@gmail.com</openprice.admin.email>
-                <openprice.support.email>hengshuai@gmail.com</openprice.support.email>
+                <openprice.web.url>http://www.openprie.io</openprice.web.url>
+                <openprice.admin.email>ryanshawtel@gmail.com</openprice.admin.email>
+                <openprice.support.email>ryanshawtel@gmail.com</openprice.support.email>
                 <openprice.loggly.tag>openprice-local</openprice.loggly.tag>
             </properties>
             <dependencies>
